# liege-bot

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  Justfile  LICENSE.md  README.md  bun.lockb  code-user-app.service  docker-compose.dev.yaml  docker-compose.yaml  package.json
.github/workflows/: backend.yml  frontend.yml  proxy.yml  rust.yml
apps/backend/: Cargo.toml  Dockerfile  Dockerfile.dev
apps/backend/src/: env.rs  main.rs  math.rs
apps/backend/src/controllers/: ai.rs  code.rs  config.rs  interactions.rs  math.rs  mod.rs  token.rs
apps/backend/src/handlers/: mod.rs
apps/backend/src/handlers/commands/: ai.rs  code.rs  math.rs  mod.rs
apps/backend/src/handlers/modals/: code.rs  mod.rs
apps/backend/src/middleware/: ratelimit.rs
apps/backend/src/models/: auth.rs  mod.rs
apps/backend/src/models/api/: ai.rs
apps/frontend/: Dockerfile  Dockerfile.dev  index.html  package.json  vite.config.ts
apps/frontend/src/: app.tsx  main.tsx
apps/frontend/src/components/: app-sidebar.tsx  auth-context.tsx  auth-provider.tsx  config-context.tsx  config-provider.tsx
apps/proxy/: Dockerfile  Dockerfile.dev
apps/proxy/config/: nginx-dev.conf  nginx.conf
prisma/: schema.prisma
prisma/migrations/20240905212707_init/: migration.sql
prisma/migrations/20240907204241_extend_user_action_type/: migration.sql
src/: args.rs  commands.ts  main.rs  server.ts  util.ts
src-frontend/: Dockerfile  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
src-frontend/src/: layout.tsx  main.tsx
src-frontend/src/components/: app-sidebar.tsx  auth-provider.tsx
src-frontend/src/hooks/: use-auth.tsx
src-frontend/src/pages/: error.tsx  loading.tsx
src/commands/: ai.rs  ai.ts  code.rs  js.ts  math.rs  math.ts  mod.rs
src/controllers/: ai.rs  interactions.rs  mod.rs  token.rs
src/handlers/commands/: ai.rs  code.rs  math.rs  mod.rs
src/handlers/modals/: mod.rs
src/lib/: codeapi.ts  user-actions.ts
src/models/: auth.rs  custom_id.rs  mod.rs  token.rs
src/models/api/: ai.rs  code.rs  mod.rs
(+13 files in other folders)
