[package]
name = "liege-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
dotenv = "0.15.0"
meval = "0.2.0"
serenity = { version = "0.12.4", default-features = false, features = [
  "builder",
  "interactions_endpoint",
] }
tiny_http = "0.12.0"
tokio = { version = "1.42.0", features = ["full"] }
