[package]
name = "liege-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
dotenv = "0.15.0"
meval = "0.2.0"
serde = "1.0.217"
reqwest = { version = "0.12.11", features = ["json"] }
serenity = { version = "0.12.4", default-features = false, features = [
  "model",
  "builder",
  "interactions_endpoint",
  "rustls_backend",
] }
tiny_http = "0.12.0"
tokio = { version = "1.42.0", features = ["full"] }
serde_with = "3.12.0"
clap = { version = "4.5.23", features = ["derive"] }
thiserror = "2.0.9"
