[package]
name = "liege-bot"
version = "0.2.2"
edition = "2024"
rust-version = "1.88"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
anyhow = "1.0.95"
dotenv = "0.15.0"
serde = "1.0.217"
serde_json = "1.0"
reqwest = { version = "0.12.11", features = ["json"] }
serenity = { version = "0.12.4", default-features = false, features = [
  "model",
  "builder",
  "interactions_endpoint",
  "rustls_backend",
] }
tokio = { version = "1.42.0", features = ["full"] }
serde_with = "3.12.0"
clap = { version = "4.5.23", features = ["derive"] }
thiserror = "2.0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9.3.0"
axum-extra = { version = "0.10.0", features = ["typed-header", "query"] }
tower_governor = "0.6.0"
reqwest-eventsource = "0.6.0"
futures = "0.3.5"
tower-http = { version = "0.6.2", features = ["cors"] }
chrono = { version = "0.4.39", features = ["serde"] }
numbat = { version = "1.16.0", features = ["html-formatter"] }
codespan-reporting = "0.11.1"
dataurl = "0.1.2"
regex = "1.11.1"
